--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
 	<title>Svelte app</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/bundle.css'>
+	<link rel='icon' type='image/png' href='ywc17-homework/favicon.png'>
+	<link rel='stylesheet' href='ywc17-homework/global.css'>
+	<link rel='stylesheet' href='ywc17-homework/bundle.css'>
 
-	<script defer src='/bundle.js'></script>
+	<script defer src='ywc17-homework/bundle.js'></script>
 </head>
 
 <body>
