--- a/index.html
+++ b/index.html
@@ -1,18 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width'>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <meta
+      property="og:url"
+      content="https://new5558.github.io/ywc17-homework/"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="มาตรการส่งเสริมการท่องเที่ยวในประเทศ “ชิมช้อปใช้”"
+    />
+    <meta
+      property="og:description"
+      content="ผู้สนใจเข้าร่วมมาตรการฯ สามารถลงทะเบียน ตั้งแต่ วันที่ 23 ก.ย. - 15 พ.ย. 62"
+    />
+    <meta property="og:image" content="./img/share/Share_Social.png" />
+    <meta
+      property="title"
+      content="มาตรการส่งเสริมการท่องเที่ยวในประเทศ “ชิมช้อปใช้”"
+    />
+    <meta
+      property="description"
+      content="ผู้สนใจเข้าร่วมมาตรการฯ สามารถลงทะเบียน ตั้งแต่ วันที่ 23 ก.ย. - 15 พ.ย. 62"
+    />
+    <meta property="image" content="./img/Share_Social.png" />
+    <title>ลงทะเบียนเข้าร่วมมาตรการ ชิมช้อปใช้</title>
+    <link rel="icon" type="image/png" href="./image/information-logo.png" />
+    <link rel="stylesheet" href="./global.css" />
+    <link rel="stylesheet" href="./bundle.css" />
 
-	<title>Svelte app</title>
+    <script defer src="./bundle.js"></script>
+  </head>
 
-	<link rel='icon' type='image/png' href='./favicon.png'>
-	<link rel='stylesheet' href='./global.css'>
-	<link rel='stylesheet' href='./bundle.css'>
-
-	<script defer src='./bundle.js'></script>
-</head>
-
-<body>
-</body>
+  <body></body>
 </html>
